--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -1,8 +1,8 @@
-#summary One-sentence summary of this page.
+#summary Few examples can do more than thousand words :)
 
 = Examples =
 
-Here are som images, some of the are saved with low jpg quality, I apologize for this, still I believe intended changes are obvious. Left side is allways original, right side is modified.
+Here are som images, some of the are saved with low jpg quality, I apologize for this, still I believe intended changes are obvious. Left side is allways original, right side is modified. (This can be done with argument "--half")
 
 http://cphix.googlecode.com/files/1-saturation.jpg
 
