Edited wiki page Examples through web user interface.

--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -11,3 +11,7 @@ http://cphix.googlecode.com/files/2-example.jpg
 http://cphix.googlecode.com/files/4-example.jpg
 
 http://cphix.googlecode.com/files/example-7.jpg
+
+http://cphix.googlecode.com/files/example-8.jpg
+
+Just be aware that with many images the changes will not be visible - or rather, no changes will be needed, so dont be disappointed... , this is feature not bug :)
