Edited wiki page Examples through web user interface.

--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -17,3 +17,7 @@ Example of snow mode (-m snow), available from 0.4d version
 http://cphix.googlecode.com/files/final_img_5803.jpg
 
 Just be aware that with many images the changes will not be visible - or rather, no changes will be needed, so dont be disappointed... , this is feature not bug :)
+
+Part of snow-mode is snow-white balancing, usually the need and effect is not significant, but below is an example when image was badly disaligned, probably due to use of a flash.
+
+http://cphix.googlecode.com/files/final_IMG_5837.JPG
