--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -1,27 +1,20 @@
 #summary Few examples can do more than thousand words :)
 
 = Examples =
+So without any introductory words - here is couple of images made with cphix v 1.1
 
-Here are som images, some of the are saved with low jpg quality, I apologize for this, still I believe intended changes are obvious. Left side is allways original, right side is modified. (This can be done with argument "--half")
+https://cphix.googlecode.com/files/final_img_2285.jpg
 
-http://cphix.googlecode.com/files/1-saturation.jpg
+https://cphix.googlecode.com/files/final_img_2252.jpg
 
-http://cphix.googlecode.com/files/2-example.jpg
+https://cphix.googlecode.com/files/final_img_2378.jpg
 
-http://cphix.googlecode.com/files/example-7.jpg
+https://cphix.googlecode.com/files/final_img_5750.jpg
 
-http://cphix.googlecode.com/files/example-8.jpg
+https://cphix.googlecode.com/files/final_img_5761.jpg
 
-Example of snow mode (-m snow), available from 0.4d version
+https://cphix.googlecode.com/files/final_img_5834.jpg
 
-http://cphix.googlecode.com/files/final_img_5803.jpg
+https://cphix.googlecode.com/files/final_IMG_0833.jpg
 
-Just be aware that with many images the changes will not be visible - or rather, no changes will be needed, so dont be disappointed... , this is feature not bug :)
-
-Part of snow-mode is snow-white balancing, usually the need and effect is not significant, but below is an example when image was badly disaligned, probably due to use of a flash.
-
-http://cphix.googlecode.com/files/final_IMG_5837.JPG
-
-Another example of snow mode
-
-http://cphix.googlecode.com/files/final_IMG_5949.JPG
+https://cphix.googlecode.com/files/final_IMG_0861.jpg
