Edited wiki page Examples through web user interface.

--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -18,3 +18,5 @@ https://cphix.googlecode.com/files/final_img_5834.jpg
 https://cphix.googlecode.com/files/final_IMG_0833.jpg
 
 https://cphix.googlecode.com/files/final_IMG_0861.jpg
+
+To learn more about Cphix visit [About] wiki page
