Edited wiki page About through web user interface.

--- a/wiki/About.wiki
+++ b/wiki/About.wiki
@@ -48,9 +48,10 @@ Well, use 'cphix.bin -h' to see switches as avaiable by now....
 
 *Limitations:*
 
-Well, this is not finished yet and there are couple of features that are to be applied yet.
+Well, this is not finished yet and there are couple of features that are to be applied yet. F.e. (but there are many more):
 
-Among other things I must note that the algorithm is not designed and/or adjusted to work with human skine...
+  #  the algorithm is not designed and/or adjusted to work with human skine...
+  # it do not do white-point balancing
 
 *Color-space theory*
 
