Edited wiki page About through web user interface.

--- a/wiki/About.wiki
+++ b/wiki/About.wiki
@@ -77,6 +77,17 @@ Well, the main dependency is [http://cimg.sourceforge.net/  Cimg (C Imaging Libr
 
 The other one is [https://code.google.com/p/easyexif/ easyefix (EXIF parsing library)]. However this one is packed in the tarbal.
 
+*Download*
+
+The source can be downloaded from download section here, or if you have subversion installed, you can download it with command:
+
+{{{
+svn checkout http://cphix.googlecode.com/svn/tags/1.6 .
+}}}
+
+It will put files into current directory.
+
+
 *Installation&compilation on Linux*
 
   # To install it you need to have basic compilation environment installed (usually this is a meta-package in packaging system) and the other package needed is Cimg - should be available in repositories of your distribution.
