--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -15,7 +15,19 @@ https://cphix.googlecode.com/files/final_IMG_0833.JPG
 https://cphix.googlecode.com/files/final_IMG_0861.JPG
 https://cphix.googlecode.com/files/final_img_2369.jpg
 https://cphix.googlecode.com/files/final_img_2378.jpg
-https://cphix.googlecode.com/files/final_img_5778.jpg
+
 https://cphix.googlecode.com/files/final_img_5834.jpg
+
+*Customization of labels*
+
+You can change size, position and transparency of label. The label is aligned by its left-bottom corner. Use -h for more info.
+
+https://cphix.googlecode.com/files/final_img_5778.jpg
+
+*Custom saturation and sharpness*
+
+Here is example of overdone image (compare with image above). I used --minsharp and --minsat switches (default values are shown when running cphix)
+
+http://cphix.googlecode.com/files/overdone.jpg
 
 To learn more about Cphix visit [About] wiki page
