Edited wiki page About through web user interface.

--- a/wiki/About.wiki
+++ b/wiki/About.wiki
@@ -121,3 +121,10 @@ But I would be glad for any even small issues you had with this tool.
 It is intended for linux, but in theory it should work also on other unix-like systems and windows as well.
 
 Contact: tiborb95 at gmail dot com
+
+
+
+
+
+<br><br><br><br><br><br><br><p align=right>
+<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=GBERSY833N4AA" target="_blank"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0"></img></a>
